@@ -1,6 +1,7 @@
 ﻿===== trunk  =====
 20.10.2011
 - @silenced unlink() in Smarty_Internal_Write_File since debuggers go haywire without it.
+- bugfix Smarty::clearCompiledTemplate() threw an Exception if $cache_id was not present in $compile_dir when $use_sub_dirs = true.
 
 19.10.2011
 - revert PHP4 constructor message
